compiler/testData/diagnostics/tests/typealias/kt14612.kt
// FIR_DISABLE_LAZY_RESOLVE_CHECKS
// ISSUE: KT-14612

typealias S = <!RECURSIVE_TYPEALIAS_EXPANSION!>@S<!> Suppress
